Mon Feb 17 10:25:00 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

        * xe_back.adb: Fixed a bug in Set_Attribute_Type.

        * xe.adb, xe.ads, xe_back.adb, xe_parse.adb, xe_parse.ads,
        xe_scan.adb: Move all enumeration types into int constants. Add
        comments into xe spec.

Sat Feb 15 15:18:03 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

        * xe.adb: Add function Get_Filter.

        * xe_build.adb: Add information on channels in configuration
        report.

        * xe_back.adb: Channels table is now generated from tree.

        * xe_parse.adb: Several changes when procedures were dedicated to
        Ada units. They need to be generalized to at least Ada units and
        channels.
        
	* xe.adb, xe.ads, xe_parse.adb: Definition of Arrays and Lists (ie
 	Channel and Partition). Definition of extensible enumeration type
 	(sets) (Ada units).

	* xe_back.adb: Definition of all channel stuff.

	* xe_build.adb: Add a new error message when file cannot be
 	found. Use package xe_stubs (was a procedure).

	* xe_parse.adb: Change termination variable from X to
 	X_Termination to avoid conflicts. Change some error messages.

	* xe_build.adb, xe_lead.adb, xe_stubs.adb, xe.adb, xe_check.adb,
 	xe_parse.adb, xe_usage.adb, xe_back.adb, xe_defs.adb, xe_scan.adb,
 	xe_utils.adb: Reorganize all code (alphabetical order).

	* xe.ads: Reorganize specification and change
 	Update_Partition_Stamp into More_Recent_Stamp.
	
Thu Feb 13 15:21:57 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe.adb: Minor reformating

	* xe_stubs.adb, xe_back.adb, xe_parse.adb, xe.ads, xe.adb: Move
 	Permanent into Termination. Three modes are allowed : Local (Don't
 	bother with other partitions), Global (Default), Deferred (Same as
 	Global but at the end, do not terminate).

	* xe_stubs.adb: When Local_Termination, once we exit the main
 	subprogram

Thu Feb 13 11:42:17 1997  Samuel Tardieu  <sam@inf.enst.fr>
